Add run configuation files for different settings

--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,16 @@ venv
 RESULTS_PRELIM_EXP
 _results*
 results*
+RESULTS*
 data*
 _old_stuff
 __pycache__
 _analysis
 REDO_BERT
 REDO_SBERT_MODELS
-EXP_RESULTS
-EXP_RUNS
+EXP_RESULTS*
+EXP_RUNS*
+TOTAL_RESULTS*
+ASAP_BASE_MODELS*
+BASELINE_RESULTS*
+CROSS_PLOTS
