update scripts to combine plots

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,4 @@
 venv
-RESULTS_PRELIM_EXP
-_results*
 results*
-RESULTS*
-FINAL_RESULTS*
-data*
-_old_stuff
+data
 __pycache__
-_analysis
-REDO_BERT
-REDO_SBERT_MODELS
-EXP_RESULTS*
-EXP_RUNS*
-TOTAL_RESULTS*
-ASAP_BASE_MODELS*
-BASELINE_RESULTS*
-CROSS_PLOTS
-AES-NPCR
